load("//:plugin.bzl", "proto_plugin")

proto_plugin(
    name = "scala",
    # Use the proto basename and pipe the value to the scala_keyword function.
    # Ths function will append '_pb' if the basename is a scala keyword.
    out = "{name}.jar",
    tool = ":protoc-gen-scala",
    visibility = ["//visibility:public"],
)

proto_plugin(
    name = "grpc_scala",
    # Use the proto basename and pipe the value to the scala_keyword function.
    # Ths function will append '_pb' if the basename is a scala keyword.
    out = "{name}.jar",
    options = [
        "grpc",
        # "java_conversions", # causes weird import problems
    ],
    tool = ":protoc-gen-scala",
    visibility = ["//visibility:public"],
)

java_library(
    name = "proto_deps",
    visibility = ["//visibility:public"],
    exports = [
        "//external:io_bazel_rules_scala/dependency/com_google_protobuf/protobuf_java",
        "//external:io_bazel_rules_scala/dependency/proto/scalapb_fastparse",
        "//external:io_bazel_rules_scala/dependency/proto/scalapb_lenses",
        "//external:io_bazel_rules_scala/dependency/proto/scalapb_runtime",
    ],
)

java_library(
    name = "grpc_deps",
    visibility = ["//visibility:public"],
    exports = [
        ":proto_deps",
        "//external:io_bazel_rules_scala/dependency/proto/google_instrumentation",
        "//external:io_bazel_rules_scala/dependency/proto/grpc_context",
        "//external:io_bazel_rules_scala/dependency/proto/grpc_core",
        "//external:io_bazel_rules_scala/dependency/proto/grpc_netty",
        "//external:io_bazel_rules_scala/dependency/proto/grpc_protobuf",
        "//external:io_bazel_rules_scala/dependency/proto/grpc_stub",
        "//external:io_bazel_rules_scala/dependency/proto/guava",
        "//external:io_bazel_rules_scala/dependency/proto/netty_buffer",
        "//external:io_bazel_rules_scala/dependency/proto/netty_codec",
        "//external:io_bazel_rules_scala/dependency/proto/netty_codec_http",
        "//external:io_bazel_rules_scala/dependency/proto/netty_codec_http2",
        "//external:io_bazel_rules_scala/dependency/proto/netty_codec_socks",
        "//external:io_bazel_rules_scala/dependency/proto/netty_common",
        "//external:io_bazel_rules_scala/dependency/proto/netty_handler",
        "//external:io_bazel_rules_scala/dependency/proto/netty_handler_proxy",
        "//external:io_bazel_rules_scala/dependency/proto/netty_resolver",
        "//external:io_bazel_rules_scala/dependency/proto/netty_transport",
        "//external:io_bazel_rules_scala/dependency/proto/opencensus_api",
        "//external:io_bazel_rules_scala/dependency/proto/opencensus_contrib_grpc_metrics",
        "//external:io_bazel_rules_scala/dependency/proto/scalapb_runtime_grpc",
    ],
)

load("@io_bazel_rules_scala//scala:scala.bzl", "scala_binary", "scala_library", "scala_test")

scala_binary(
    name = "compiler_plugin",
    srcs = ["CompilerPlugin.scala"],
    main_class = "CompilerPlugin",
    visibility = ["//visibility:public"],
    deps = [
        "//external:com_github_scalapb_scalapb_compilerplugin",
        "@com_google_protobuf//:protobuf_java",
    ],
)

# Curiously this didn't work
#
# genrule(
#     name = "gen_protoc_gen_scala",
#     srcs = ["compiler_plugin_deploy.jar", "@local_jdk//:bin/java"],
#     outs = ["protoc-gen-scala.sh"],
#     cmd = """
#     echo '$(location @local_jdk//:bin/java) -jar $(location protoc_gen_deploy.jar) $$@' > $@
#     """,
#     executable = True,
# )

# ======================================================================
#
# Unable to get either bazel or maybe protoc to call a plugin whose
# implementation was fronted by a shell script (from a genrule).  So, the only
# way this seemed to work was compile an executable that calls 'java -jar
# protoc_gen_scala_deploy.jar'.  Either figure out how to do this in java
# directly or write the wrapper in C++ to remove the go dependency here.
#
load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "protoc-gen-scala.go",
    ],
    importpath = "github.com/stackb/rules_proto/scala/protoc-gen-scala",
    visibility = ["//visibility:public"],
)

go_binary(
    name = "protoc-gen-scala",
    data = [
        ":compiler_plugin_deploy.jar",
        "@bazel_tools//tools/jdk:jre",
    ],
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
