load("//:plugin.bzl", "proto_plugin")

proto_plugin(
    name = "swift",
    outputs = [".pb.swift"],
    tool = "@com_github_apple_swift_protobuf//:ProtoCompilerPlugin",
    visibility = ["//visibility:public"],
)

proto_plugin(
    name = "grpc_swift",
    outputs = [".grpc.swift"],
    tool = "@com_github_grpc_grpc_swift//:protoc-gen-swiftgrpc",
    visibility = ["//visibility:public"],
)
