load("//toolchain:toolchain.bzl", "protoc")

toolchain_type(
    name = "protoc",
    visibility = ["//visibility:public"],
)

toolchain(
    name = "standard",
    toolchain = ":compiled",
    toolchain_type = "//toolchain:protoc",
)

protoc(
    name = "compiled",
    tool = "@com_google_protobuf//:protoc",
)

filegroup(
    name = "all_files",
    testonly = True,
    srcs = [
        "BUILD.bazel",
        "toolchain.bzl",
    ],
    visibility = ["//:__pkg__"],
)
